# drift-aware-anomaly-detection

./: .gitignore  DESIGN.md  LESSONS_LEARNED.md  README.md  pyproject.toml
configs/: machine_temp_iforest.yaml  machine_temp_mad.yaml  nyc_taxi_iforest.yaml  nyc_taxi_mad.yaml
notebooks/: 01_exploration_taxi_iforest.ipynb  01_exploration_taxi_mad.ipynb  02_exploration_machine_temp_iforest.ipynb  02_exploration_machine_temp_mad.ipynb
src/anomaly_budget/: __init__.py  artifacts.py  cli.py  config.py  data.py  evaluation.py  features.py  run.py  thresholds.py  validate.py
src/anomaly_budget/models/: baseline_mad.py  iforest.py
